--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@fontsource/nunito": "^4.5.11",
-    "@supabase/supabase-js": "^2.2.2",
-    "astro": "^1.7.2",
-    "preact": "^10.6.5"
+    "@netlify/functions": "^1.3.0",
+    "@prisma/client": "^4.8.0",
+    "astro": "^1.7.2"
   },
   "devDependencies": {
     "@astrojs/image": "^0.12.1",
@@ -27,9 +27,11 @@
     "astro-robots-txt": "^0.3.10",
     "lucide-preact": "^0.104.0",
     "mdast-util-to-string": "^3.1.0",
+    "preact": "^10.11.3",
     "prettier": "^2.8.1",
     "prettier-plugin-astro": "^0.7.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "prisma": "^4.8.0",
     "reading-time": "^1.5.0",
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
