--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
     "@octokit/rest": "^19.0.5",
+    "astro-og-canvas": "^0.1.5",
     "astro-robots-txt": "^0.3.10",
     "lucide-preact": "^0.104.0",
     "mdast-util-to-string": "^3.1.0",
