--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,9 @@
   to = "/.netlify/functions/:splat"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/og/*"
+  to = "/open-graph/src/content/posts/:splat"
+  status = 200
+  force = true
