--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
       "@public/*": ["public/*"]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "preact",
-    "types": ["@astrojs/image/client"]
+    "jsxImportSource": "preact"
   }
 }
