--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@fontsource/nunito": "^4.5.11",
     "@netlify/functions": "^1.3.0",
-    "@prisma/client": "^4.8.0",
+    "@netlify/planetscale": "^1.0.0",
     "astro": "^1.7.2"
   },
   "devDependencies": {
@@ -32,7 +32,6 @@
     "prettier": "^2.8.1",
     "prettier-plugin-astro": "^0.7.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.8.0",
     "reading-time": "^1.5.0",
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
