--- a/package.json
+++ b/package.json
@@ -14,28 +14,29 @@
     "@fontsource/nunito": "^4.5.12",
     "@netlify/functions": "^1.4.0",
     "@netlify/planetscale": "^1.0.0",
-    "astro": "^2.0.9"
+    "astro": "^2.0.14"
   },
   "devDependencies": {
-    "@astrojs/image": "^0.14.1",
-    "@astrojs/mdx": "^0.16.0",
-    "@astrojs/preact": "^2.0.2",
-    "@astrojs/rss": "^2.1.0",
+    "@astrojs/image": "^0.15.0",
+    "@astrojs/mdx": "^0.16.2",
+    "@astrojs/preact": "^2.0.3",
+    "@astrojs/rss": "^2.1.1",
     "@astrojs/sitemap": "^1.0.1",
     "@astrojs/tailwind": "^3.0.1",
     "@octokit/rest": "^19.0.7",
     "astro-og-canvas": "^0.1.6",
-    "astro-robots-txt": "^0.3.11",
-    "lucide-preact": "^0.112.0",
+    "astro-robots-txt": "^0.4.0",
+    "lucide-preact": "^0.115.0",
     "mdast-util-to-string": "^3.1.1",
-    "preact": "^10.12.0",
+    "preact": "^10.12.1",
     "prettier": "^2.8.4",
     "prettier-plugin-astro": "^0.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.2",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "reading-time": "^1.5.0",
-    "sass": "^1.58.0",
+    "readingtime": "^0.0.2",
+    "sass": "^1.58.3",
     "sharp": "^0.31.3",
-    "tailwindcss": "^3.2.6",
+    "tailwindcss": "^3.2.7",
     "tailwindcss-fluid-type": "^2.0.3"
   }
 }
