--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@fontsource/nunito": "^4.5.12",
+    "@fontsource/outfit": "^4.5.11",
     "@netlify/functions": "^1.4.0",
     "@netlify/planetscale": "^1.0.0",
     "astro": "^2.0.14"
