--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "redirects": [
     {
-      "source": "/open-graph/src/content/posts/:path",
-      "destination": "/og"
+      "source": "/og",
+      "destination": "/open-graph/src/content/posts/:path"
     }
   ]
 }
