--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{ "crons": [{ "path": "/api/daily-build", "schedule": "0 0 0 * * *" }] }
+{ "crons": [{ "path": "/api/daily-build", "schedule": "0 0 * * *" }] }
