--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@fontsource/maitree": "^4.5.11",
-    "@netlify/functions": "^1.4.0",
-    "@netlify/planetscale": "^1.0.0",
-    "astro": "^2.3.4"
+    "@planetscale/database": "^1.7.0",
+    "astro": "^2.4.5"
   },
   "devDependencies": {
     "@astrojs/mdx": "^0.19.1",
     "@astrojs/preact": "^2.1.0",
     "@astrojs/rss": "^2.4.1",
-    "@astrojs/sitemap": "^1.2.2",
+    "@astrojs/sitemap": "^1.3.1",
     "@astrojs/tailwind": "^3.1.2",
-    "@octokit/rest": "^19.0.7",
+    "@fontsource/maitree": "^4.5.11",
+    "@octokit/rest": "^19.0.8",
     "astro-og-canvas": "^0.1.8",
     "astro-robots-txt": "^0.5.0",
-    "lucide-preact": "^0.206.0",
+    "lucide-preact": "^0.216.0",
     "mdast-util-to-string": "^3.2.0",
-    "preact": "^10.13.2",
+    "preact": "^10.14.0",
     "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-astro": "^0.8.1",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "reading-time": "^1.5.0",
     "sass": "^1.62.1",
