--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier-plugin-astro": "^0.9.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "reading-time": "^1.5.0",
+    "rehype-pretty-code": "^0.9.5",
     "sass": "^1.62.1",
     "sharp": "^0.32.1",
     "tailwindcss": "^3.3.2",
