--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.1",
     "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vercel": "^3.4.1",
     "@fontsource/maitree": "^5.0.1",
     "@octokit/rest": "^19.0.11",
     "astro-og-canvas": "^0.1.8",
