--- a/package.json
+++ b/package.json
@@ -11,30 +11,31 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@planetscale/database": "^1.7.0",
-    "astro": "^2.5.6"
+    "@planetscale/database": "^1.8.0",
+    "astro": "^2.8.1"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^0.19.5",
+    "@astrojs/mdx": "^0.19.7",
     "@astrojs/preact": "^2.2.1",
     "@astrojs/rss": "^2.4.3",
-    "@astrojs/sitemap": "^1.3.2",
-    "@astrojs/tailwind": "^3.1.3",
-    "@fontsource/maitree": "^5.0.2",
-    "@octokit/rest": "^19.0.11",
+    "@astrojs/sitemap": "^1.3.3",
+    "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/vercel": "^3.7.0",
+    "@fontsource/maitree": "^5.0.5",
+    "@octokit/rest": "^20.0.1",
     "astro-og-canvas": "^0.1.8",
     "astro-robots-txt": "^0.5.0",
-    "lucide-preact": "^0.230.0",
-    "mdast-util-to-string": "^3.2.0",
-    "preact": "^10.15.1",
-    "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.9.1",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "lucide-preact": "^0.259.0",
+    "mdast-util-to-string": "^4.0.0",
+    "preact": "^10.16.0",
+    "prettier": "2.8.8",
+    "prettier-plugin-astro": "0.9.1",
+    "prettier-plugin-tailwindcss": "^0.4.0",
     "reading-time": "^1.5.0",
-    "rehype-pretty-code": "^0.9.6",
-    "sass": "^1.62.1",
-    "sharp": "^0.32.1",
-    "tailwind-merge": "^1.13.0",
+    "rehype-pretty-code": "^0.10.0",
+    "sass": "^1.63.6",
+    "sharp": "^0.32.2",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "^3.3.2",
     "tailwindcss-fluid-type": "^2.0.3"
   }
