--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass": "^1.66.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-fluid-type": "^2.0.3"
+    "tailwindcss-fluid-type": "^2.0.3",
+    "unist-util-visit": "^5.0.0"
   }
 }
