--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "devDependencies": {
     "@astrojs/mdx": "^1.0.2",
-    "@astrojs/preact": "^3.0.0",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
@@ -25,9 +24,8 @@
     "@octokit/rest": "^20.0.1",
     "astro-og-canvas": "^0.2.1",
     "astro-robots-txt": "^0.5.0",
-    "lucide-preact": "^0.274.0",
+    "lucide-astro": "^0.276.0",
     "mdast-util-to-string": "^4.0.0",
-    "preact": "^10.17.1",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0",
     "prettier-plugin-tailwindcss": "^0.5.4",
