--- a/package.json
+++ b/package.json
@@ -11,32 +11,30 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@planetscale/database": "^1.8.0",
-    "astro": "^2.9.1"
+    "@planetscale/database": "^1.11.0",
+    "astro": "^3.0.10"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/preact": "^2.2.1",
-    "@astrojs/rss": "^2.4.3",
-    "@astrojs/sitemap": "^2.0.1",
-    "@astrojs/tailwind": "^4.0.0",
-    "@astrojs/vercel": "^3.7.4",
-    "@fontsource/maitree": "^5.0.5",
+    "@astrojs/mdx": "^1.0.2",
+    "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/vercel": "^4.0.4",
+    "@fontsource/inter": "^5.0.8",
     "@octokit/rest": "^20.0.1",
-    "astro-og-canvas": "^0.1.8",
+    "astro-og-canvas": "^0.2.1",
     "astro-robots-txt": "^0.5.0",
-    "lucide-preact": "^0.263.0",
+    "lucide-astro": "^0.276.0",
     "mdast-util-to-string": "^4.0.0",
-    "preact": "^10.16.0",
-    "prettier": "2.8.8",
-    "prettier-plugin-astro": "0.10.0",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prettier": "3.0.3",
+    "prettier-plugin-astro": "0.12.0",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "reading-time": "^1.5.0",
-    "rehype-pretty-code": "^0.10.0",
-    "sass": "^1.64.0",
-    "sharp": "^0.32.4",
+    "rehype-pretty-code": "^0.10.1",
+    "sass": "^1.66.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-fluid-type": "^2.0.3"
+    "tailwindcss-fluid-type": "^2.0.3",
+    "unist-util-visit": "^5.0.0"
   }
 }
