--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -11,6 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Request Deployment to Vercel
-        run: curl -s https://google.com | bash
-# process.env.VERCEL_DEPLOY_WEBHOOK_TOKEN
-# https://api.vercel.com/v1/integrations/deploy/${token.data}
+        run: |
+          curl  -X GET https://api.vercel.com/v1/integrations/deploy/${{ secrets.VERCEL_DEPLOY_WEBHOOK_TOKEN }}
