--- a/package.json
+++ b/package.json
@@ -6,32 +6,35 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build && pagefind --site .vercel/output/static",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@pagefind/modular-ui": "^1.0.3",
     "@planetscale/database": "^1.11.0",
-    "astro": "^3.2.0"
+    "astro": "^3.3.2",
+    "pagefind": "^1.0.3"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^1.1.0",
+    "@astrojs/mdx": "^1.1.2",
     "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "@astrojs/vercel": "^5.0.1",
-    "@fontsource/inter": "^5.0.8",
+    "@astrojs/sitemap": "^3.0.2",
+    "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^5.0.2",
+    "@fontsource/inter": "^5.0.14",
     "@octokit/rest": "^20.0.2",
     "astro-og-canvas": "^0.2.1",
     "astro-robots-txt": "^1.0.0",
-    "lucide-astro": "^0.279.0",
+    "lucide-astro": "^0.288.0",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0",
-    "prettier-plugin-tailwindcss": "^0.5.4",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.10.1",
-    "sass": "^1.68.0",
+    "sass": "^1.69.4",
+    "shiki": "^0.14.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-fluid-type": "^2.0.3",
