--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@planetscale/database": "^1.11.0",
-    "astro": "^3.6.3",
+    "@astrojs/db": "^0.8.5",
+    "astro": "^4.5.4",
     "pagefind": "^1.0.4"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^1.1.5",
-    "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "^5.0.2",
-    "@astrojs/vercel": "^5.2.0",
-    "@fontsource/inter": "^5.0.15",
+    "@astrojs/mdx": "^2.2.0",
+    "@astrojs/rss": "^4.0.5",
+    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.6",
+    "@fontsource/inter": "^5.0.17",
     "@octokit/rest": "^20.0.2",
-    "astro-og-canvas": "^0.3.2",
+    "astro-og-canvas": "^0.4.2",
     "astro-robots-txt": "^1.0.0",
-    "lucide-astro": "^0.294.0",
+    "lucide-astro": "^0.358.0",
     "mdast-util-to-string": "^4.0.0",
-    "prettier": "3.1.0",
-    "prettier-plugin-astro": "0.12.2",
-    "prettier-plugin-tailwindcss": "^0.5.7",
+    "prettier": "3.2.5",
+    "prettier-plugin-astro": "0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "reading-time": "^1.5.0",
-    "rehype-pretty-code": "^0.10.2",
-    "sass": "^1.69.5",
-    "shiki": "^0.14.5",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss": "^3.3.5",
+    "rehype-pretty-code": "^0.13.0",
+    "sass": "^1.72.0",
+    "shiki": "^1.1.7",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-fluid-type": "^2.0.3",
     "unist-util-visit": "^5.0.0"
   }
