--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.74.1",
     "shiki": "^1.3.0",
     "tailwind-merge": "^2.2.2",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.3",
     "tailwindcss-fluid-type": "^2.0.6",
     "unist-util-visit": "^5.0.0"
