--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fontsource/inter": "^5.0.17",
     "@octokit/rest": "^20.1.0",
     "@types/alpinejs": "^3.13.10",
+    "astro-color-scheme": "^1.1.2",
     "astro-og-canvas": "^0.4.2",
     "astro-robots-txt": "^1.0.0",
     "lucide-astro": "^0.366.0",
@@ -38,9 +39,10 @@
     "sass": "^1.74.1",
     "shiki": "^1.3.0",
     "tailwind-merge": "^2.2.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-fluid-type": "^2.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0"
   }
 }
