--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "@astrojs/db": "^0.10.2",
     "alpinejs": "^3.13.8",
-    "astro": "^4.5.17",
-    "fuse.js": "^7.0.0"
+    "astro": "^4.5.17"
   },
   "devDependencies": {
     "@astrojs/alpinejs": "^0.4.0",
@@ -29,6 +28,7 @@
     "astro-color-scheme": "^1.1.2",
     "astro-og-canvas": "^0.4.2",
     "astro-robots-txt": "^1.0.0",
+    "fluid-tailwind": "^0.1.6",
     "lucide-astro": "^0.366.0",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "3.2.5",
