--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.13.1",
     "sass": "^1.74.1",
+    "sharp": "^0.33.3",
     "shiki": "^1.3.0",
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
