--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/db": "^0.11.2",
+    "@astrojs/db": "^0.11.3",
     "alpinejs": "^3.13.10",
-    "astro": "^4.8.4"
+    "astro": "^4.8.5"
   },
   "devDependencies": {
     "@astrojs/alpinejs": "^0.4.0",
@@ -28,6 +28,7 @@
     "astro-color-scheme": "^1.1.4",
     "astro-og-canvas": "^0.5.0",
     "astro-robots-txt": "^1.0.0",
+    "canvaskit-wasm": "^0.39.1",
     "lucide-astro": "^0.378.0",
     "mdast-util-from-markdown": "^2.0.0",
     "mdast-util-to-string": "^4.0.0",
@@ -36,8 +37,8 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.13.2",
-    "sass": "^1.77.1",
-    "sharp": "^0.33.3",
+    "sass": "^1.77.2",
+    "sharp": "^0.33.4",
     "shiki": "^1.5.2",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
