✨ Alpinejs collapse | collapsible component | mobile toc

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@alpinejs/collapse": "^3.14.0",
     "@astrojs/db": "^0.11.3",
     "alpinejs": "^3.13.10",
     "astro": "^4.8.5"
