--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@alpinejs/collapse": "^3.14.0",
+    "@alpinejs/focus": "^3.14.0",
     "@astrojs/db": "^0.11.3",
     "alpinejs": "^3.13.10",
     "astro": "^4.8.5"
