--- a/package.json
+++ b/package.json
@@ -6,41 +6,46 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build --remote && pagefind --site .vercel/output/static",
+    "build": "astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/db": "^0.10.2",
-    "alpinejs": "^3.13.8",
-    "astro": "^4.5.17",
-    "pagefind": "^1.1.0"
+    "@alpinejs/collapse": "^3.14.0",
+    "@alpinejs/focus": "^3.14.0",
+    "@astrojs/db": "^0.11.4",
+    "alpinejs": "^3.14.0",
+    "astro": "^4.9.1"
   },
   "devDependencies": {
     "@astrojs/alpinejs": "^0.4.0",
-    "@astrojs/mdx": "^2.2.4",
-    "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.1.2",
+    "@astrojs/mdx": "^3.0.1",
+    "@astrojs/rss": "^4.0.6",
+    "@astrojs/sitemap": "^3.1.5",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.5.2",
-    "@fontsource/inter": "^5.0.17",
-    "@octokit/rest": "^20.1.0",
+    "@astrojs/vercel": "^7.6.0",
+    "@fontsource/inter": "^5.0.18",
+    "@octokit/rest": "^20.1.1",
     "@types/alpinejs": "^3.13.10",
-    "astro-og-canvas": "^0.4.2",
+    "astro-og-canvas": "^0.5.0",
     "astro-robots-txt": "^1.0.0",
-    "lucide-astro": "^0.366.0",
+    "canvaskit-wasm": "^0.39.1",
+    "lucide-astro": "^0.379.0",
+    "mdast-util-from-markdown": "^2.0.0",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "3.2.5",
-    "prettier-plugin-astro": "0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier-plugin-astro": "0.14.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "reading-time": "^1.5.0",
-    "rehype-pretty-code": "^0.13.1",
-    "sass": "^1.74.1",
-    "shiki": "^1.3.0",
-    "tailwind-merge": "^2.2.2",
+    "rehype-pretty-code": "^0.13.2",
+    "sass": "^1.77.2",
+    "sharp": "^0.33.4",
+    "shiki": "^1.6.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-fluid-type": "^2.0.6",
-    "unist-util-visit": "^5.0.0"
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-fluid-type": "^2.0.6"
   }
 }
