--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -1,7 +1,8 @@
-name: Astro Studio
+name: Astro DB
 
 env:
   ASTRO_STUDIO_APP_TOKEN: ${{secrets.ASTRO_STUDIO_APP_TOKEN }}
+  ASTRO_STUDIO_EXECUTE_SEED: ${{github.event_name == 'push' && github.ref == 'refs/heads/main'}}
 
 on:
   push:
@@ -24,3 +25,5 @@ jobs:
           node-version: 20
       - uses: jaid/action-npm-install@v1.2.1
       - uses: withastro/action-studio@main
+      - if: ${{ env.ASTRO_STUDIO_EXECUTE_SEED }}
+        run: npx astro db execute db/seed.prod.ts --remote
