--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/vercel": "8.0.0-beta.2",
     "@fontsource/inter": "^5.0.20",
+    "@iconify-json/lucide": "^1.2.4",
     "@octokit/rest": "^21.0.1",
     "@types/alpinejs": "^3.13.10",
+    "astro-icon": "^1.1.1",
     "astro-og-canvas": "^0.5.3",
     "astro-robots-txt": "^1.0.0",
     "canvaskit-wasm": "^0.39.1",
-    "lucide-astro": "^0.427.0",
     "mdast-util-from-markdown": "^2.0.1",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "3.3.3",
