--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   "dependencies": {
     "@alpinejs/collapse": "^3.14.1",
     "@alpinejs/focus": "^3.14.1",
-    "@astrojs/db": "0.14.0-beta.1",
+    "@astrojs/db": "0.14.1",
     "alpinejs": "^3.14.1",
-    "astro": "5.0.0-beta.1"
+    "astro": "4.15.9"
   },
   "devDependencies": {
     "@astrojs/alpinejs": "^0.4.0",
-    "@astrojs/mdx": "4.0.0-beta.1",
+    "@astrojs/mdx": "3.1.7",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.1",
-    "@astrojs/vercel": "8.0.0-beta.2",
-    "@fontsource/inter": "^5.0.20",
-    "@iconify-json/lucide": "^1.2.4",
-    "@octokit/rest": "^21.0.1",
+    "@astrojs/vercel": "7.8.1",
+    "@fontsource/inter": "^5.1.0",
+    "@iconify-json/lucide": "^1.2.5",
+    "@octokit/rest": "^21.0.2",
     "@types/alpinejs": "^3.13.10",
     "astro-icon": "^1.1.1",
     "astro-og-canvas": "^0.5.3",
@@ -36,16 +36,16 @@
     "mdast-util-to-string": "^4.0.0",
     "prettier": "3.3.3",
     "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.6",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "reading-time": "^1.5.0",
-    "rehype-pretty-code": "^0.13.2",
-    "sass": "^1.77.8",
-    "sharp": "^0.33.4",
-    "shiki": "^1.13.0",
+    "rehype-pretty-code": "^0.14.0",
+    "sass": "^1.79.3",
+    "sharp": "^0.33.5",
+    "shiki": "^1.18.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-fluid-type": "^2.0.6"
   }
