--- a/package.json
+++ b/package.json
@@ -11,40 +11,41 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@alpinejs/collapse": "^3.14.0",
-    "@alpinejs/focus": "^3.14.0",
-    "@astrojs/db": "^0.11.6",
-    "alpinejs": "^3.14.0",
-    "astro": "^4.10.3"
+    "@alpinejs/collapse": "^3.14.1",
+    "@alpinejs/focus": "^3.14.1",
+    "@astrojs/db": "0.14.1",
+    "alpinejs": "^3.14.1",
+    "astro": "4.15.9"
   },
   "devDependencies": {
     "@astrojs/alpinejs": "^0.4.0",
-    "@astrojs/mdx": "^3.1.1",
-    "@astrojs/rss": "^4.0.6",
+    "@astrojs/mdx": "3.1.7",
+    "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.7.1",
-    "@fontsource/inter": "^5.0.18",
-    "@octokit/rest": "^20.1.1",
+    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "7.8.1",
+    "@fontsource/inter": "^5.1.0",
+    "@iconify-json/lucide": "^1.2.5",
+    "@octokit/rest": "^21.0.2",
     "@types/alpinejs": "^3.13.10",
-    "astro-og-canvas": "^0.5.1",
+    "astro-icon": "^1.1.1",
+    "astro-og-canvas": "^0.5.3",
     "astro-robots-txt": "^1.0.0",
     "canvaskit-wasm": "^0.39.1",
-    "lucide-astro": "^0.395.0",
     "mdast-util-from-markdown": "^2.0.1",
     "mdast-util-to-string": "^4.0.0",
-    "prettier": "3.3.2",
-    "prettier-plugin-astro": "0.14.0",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier": "3.3.3",
+    "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "reading-time": "^1.5.0",
-    "rehype-pretty-code": "^0.13.2",
-    "sass": "^1.77.6",
-    "sharp": "^0.33.4",
-    "shiki": "^1.7.0",
-    "tailwind-merge": "^2.3.0",
+    "rehype-pretty-code": "^0.14.0",
+    "sass": "^1.79.3",
+    "sharp": "^0.33.5",
+    "shiki": "^1.18.0",
+    "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-fluid-type": "^2.0.6"
   }
