--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@astrojs/mdx": "3.1.7",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/tailwind": "^5.1.1",
     "@astrojs/vercel": "7.8.1",
     "@fontsource/inter": "^5.1.0",
     "@iconify-json/lucide": "^1.2.5",
     "@octokit/rest": "^21.0.2",
+    "@tailwindcss/vite": "4.0.0-beta.4",
     "@types/alpinejs": "^3.13.10",
     "astro-icon": "^1.1.1",
     "astro-og-canvas": "^0.5.3",
@@ -43,10 +43,8 @@
     "sharp": "^0.33.5",
     "shiki": "^1.18.0",
     "tailwind-merge": "^2.5.2",
-    "tailwind-scrollbar": "^3.1.0",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss": "^3.4.13",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "4.0.0-beta.4",
     "tailwindcss-fluid-type": "^2.0.6"
   }
 }
