--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "7.8.1",
-    "@fontsource/inter": "^5.1.0",
+    "@fontsource/geist-sans": "^5.1.0",
     "@iconify-json/lucide": "^1.2.5",
     "@octokit/rest": "^21.0.2",
     "@tailwindcss/vite": "4.0.0-beta.4",
