--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build --remote",
+    "build": "astro build --remote && pagefind --site .vercel/output/static",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -34,6 +34,7 @@
     "canvaskit-wasm": "^0.39.1",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-to-string": "^4.0.0",
+    "pagefind": "^1.2.0",
     "prettier": "3.4.1",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
