--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build --remote && pagefind --site .vercel/output/static",
+    "build": "astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -43,6 +43,7 @@
     "sass": "^1.81.0",
     "sharp": "^0.33.5",
     "shiki": "^1.24.0",
+    "sirv": "^3.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwind-variants": "^0.3.0",
     "tailwindcss": "4.0.0-beta.4",
