--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "canvaskit-wasm": "^0.39.1",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-to-string": "^4.0.0",
+    "pagefind": "^1.2.0",
     "prettier": "3.4.1",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
@@ -42,6 +43,7 @@
     "sass": "^1.81.0",
     "sharp": "^0.33.5",
     "shiki": "^1.24.0",
+    "sirv": "^3.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwind-variants": "^0.3.0",
     "tailwindcss": "4.0.0-beta.4",
