--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/vercel": "8.0.5",
+    "@fontsource-variable/eb-garamond": "^5.1.2",
     "@fontsource/geist-mono": "^5.1.1",
     "@fontsource/geist-sans": "^5.1.0",
     "@iconify-json/arcticons": "^1.2.18",
