--- a/package.json
+++ b/package.json
@@ -6,46 +6,48 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build --remote",
+    "build": "astro build --remote ",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@alpinejs/focus": "^3.14.5",
-    "@astrojs/db": "0.14.3",
-    "alpinejs": "^3.14.5",
-    "astro": "4.16.16"
+    "@alpinejs/focus": "^3.14.8",
+    "@astrojs/db": "0.14.6",
+    "alpinejs": "^3.14.8",
+    "astro": "5.2.1"
   },
   "devDependencies": {
-    "@astrojs/alpinejs": "^0.4.0",
-    "@astrojs/mdx": "3.1.9",
-    "@astrojs/rss": "^4.0.9",
+    "@astrojs/alpinejs": "^0.4.3",
+    "@astrojs/mdx": "4.0.8",
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/vercel": "7.8.2",
-    "@fontsource/geist-mono": "^5.1.0",
+    "@astrojs/vercel": "8.0.5",
+    "@fontsource-variable/eb-garamond": "^5.1.2",
+    "@fontsource/geist-mono": "^5.1.1",
     "@fontsource/geist-sans": "^5.1.0",
-    "@iconify-json/arcticons": "^1.2.10",
-    "@iconify-json/lucide": "^1.2.17",
-    "@octokit/rest": "^21.0.2",
-    "@tailwindcss/vite": "4.0.0-beta.8",
+    "@iconify-json/arcticons": "^1.2.18",
+    "@iconify-json/lucide": "^1.2.25",
+    "@octokit/rest": "^21.1.0",
+    "@tailwindcss/vite": "4.0.1",
     "@types/alpinejs": "^3.13.11",
-    "astro-icon": "^1.1.4",
-    "astro-pagefind": "^1.7.0",
+    "astro-icon": "^1.1.5",
     "astro-robots-txt": "^1.0.0",
-    "astro-theme-toggle": "^0.3.5",
+    "astro-theme-toggle": "^0.5.1",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-to-string": "^4.0.0",
-    "prettier": "3.4.1",
+    "pagefind": "^1.3.0",
+    "prettier": "3.4.2",
     "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.14.0",
     "satori-astro": "^0.3.0",
     "satori-html": "^0.3.2",
     "sharp": "^0.33.5",
-    "shiki": "^1.24.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwind-variants": "^0.3.0",
-    "tailwindcss": "4.0.0-beta.8"
+    "shiki": "^1.3.0",
+    "sirv": "^3.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss": "4.0.1"
   }
 }
