--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "@tailwindcss/vite": "4.1.3",
     "@types/alpinejs": "^3.13.11",
     "astro-icon": "^1.1.5",
+    "astro-pagefind": "^1.8.3",
     "astro-robots-txt": "^1.0.0",
     "astro-theme-toggle": "^0.6.0",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-to-string": "^4.0.0",
-    "pagefind": "^1.3.0",
     "prettier": "3.5.3",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -45,7 +45,6 @@
     "satori-html": "^0.3.2",
     "sharp": "^0.34.1",
     "shiki": "^3.2.2",
-    "sirv": "^3.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "4.1.3"
